# cpp_mapreduce

./: CMakeLists.txt  main.cpp  mapreduce.cpp  mapreduce.h  prefix.cpp  prefix.h
tests/: test_mapreduce.cpp
